--- a/packages/ios/pam.plist
+++ b/packages/ios/pam.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>https://smalldata.io/packages/ios/PAM.ipa</string>
+                                        <string>http://smalldata.io/packages/ios/PAM.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
